--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,35 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import DesignStudioBanner from '../components/design-studio-banner.astro';
+import MadeleyDesignStudioBanner from '../components/madeleydesignstudio-banner.astro';
+import '../styles/global.css';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+	<Layout>
+		<div class="flex h-screen">
+			<MadeleyDesignStudioBanner />
+			<!-- <DesignStudioBanner /> -->
+			<svg class="absolute -bottom-[1000px] -right-[450px] w-[1400px] h-[1400px]">
+				<circle 
+					cx="625" 
+					cy="625" 
+					r="623" 
+					class="fill-none stroke-white/20 stroke-2" 
+					stroke-dasharray="30 20"
+				/>
+			</svg>
+			<svg class="absolute -top-[500px] -right-[450px] w-[1400px] h-[1400px] ">
+				<circle 
+					cx="625" 
+					cy="625" 
+					r="623" 
+					class="fill-none stroke-white/20 stroke-2" 
+					stroke-dasharray="30 20"
+				/>
+			</svg>
+
+		</div>
+	</Layout>
+
+
