--- a/src/components/design-studio-banner.astro
+++ b/src/components/design-studio-banner.astro
@@ -1,35 +1,27 @@
 ---
 // Import the font
-import '@fontsource/jaro';
+import "@fontsource/jaro";
 ---
 
-<div class=" w-fit bg-green-400">
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Design</h1>
-  <h1 class="text-5xl font-bold text-white text-center uppercase font-jaro">Studio</h1>
+<div
+  x-data="{ position: 0 }"
+  class="w-fit bg-green-400 h-[60px] overflow-hidden relative"
+  x-init="setInterval(() => { position = (position - 1); }, 50)"
+>
+  <div
+    class="absolute transition-transform duration-0"
+    :style="`transform: translateY(${position}px)`"
+    @transitionend="if (position <= -60) position = 0"
+  >
+    <h1
+      class="h-[60px] flex items-center text-5xl font-bold text-white text-center uppercase font-jaro"
+    >
+      Design
+    </h1>
+    <h1
+      class="h-[60px] flex items-center text-5xl font-bold text-white text-center uppercase font-jaro"
+    >
+      Studio
+    </h1>
+  </div>
 </div>
