--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import "../styles/global.css";
 <Layout>
   <div class="flex h-full w-full">
     <!-- <Image client:load /> -->
-    <MadeleyDesignStudioBanner client:load />
+    <MadeleyDesignStudioBanner />
     <Content />
 
     <div
