--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,12 @@ import MadeleyDesignStudioBanner from "../components/madeleydesignstudio-banner.
 import Content from "../components/content.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
-// import Image from "../components/image.astro";
+import Image from "../components/image.astro";
 ---
 
 <Layout>
   <div class="flex h-full w-full">
-    <!-- <Image client:load /> -->
+    <Image />
     <MadeleyDesignStudioBanner />
     <Content />
 
