--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Image from "../components/image.astro";
 
 <Layout>
   <div class="flex h-full w-full">
-    <Image />
+    <Image client:load />
     <MadeleyDesignStudioBanner />
     <Content />
 
