--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import ProjectsTab from "@/components/projects-tab.astro";
     <SocialIcons />
     <ProjectsTab />
     <div
-      class="fixed -bottom-0 left-0 h-full w-full bg-gradient-to-r from-stone-950 to-transparent -z-[1]"
+      class="fixed -bottom-0 left-0 h-full w-full bg-gradient-to-r from-stone-950/90 to-transparent -z-[1]"
     >
     </div>
     <div class="fixed -bottom-0 left-0 h-full w-full bg-stone-950/50 -z-[1]">
