--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,23 @@ body {
   background-color: #000;
 }
 
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for Firefox */
+  * {
+    scrollbar-width: none;
+  }
+}
+
 @theme {
   --font-jaro: "Jaro", "sans-serif";
 }
+
